src/main/java/com/example/cinemagicgto/cinemarestful/error/MedioDePagoNotFoundException.java
package com.example.cinemagicgto.cinemarestful.error;

public class MedioDePagoNotFoundException extends Exception{
    public MedioDePagoNotFoundException(String message) {super(message);}
}
